--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
 body{
    background: #fafafa;
 }
+
+main{
+   max-width: 1080px;
+   height: 100%;
+   padding: 6rem;
+   display: flex;
+   flex-direction: column;
+}
